# hhc-cpp-test

./: .clangd  .gitignore  CI_CD_SETUP.md  CI_PIPELINE_STRUCTURE.md  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  WORKFLOWS_QUICK_REFERENCE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  coverage.yml  docs.yml  fuzzing.yml  python.yml  release.yml
benchmarks/: CMakeLists.txt  benchmark_hcc.cpp  benchmark_hhc.cpp  decode64_bench.cpp
examples/: CMakeLists.txt
hcc-cpp/: hcc.hpp
hhc-cpp/: hhc.hpp
k-hhc/: hhc_assert.hpp
python/: CMakeLists.txt  MANIFEST.in  README.md  hhc_python.cpp  pyproject.toml  setup.py  test_hhc.py
python/examples/: decode_example.py  encode_example.py
tests/: CMakeLists.txt  assert_tests.cpp  bounds_tests.cpp  constants_tests.cpp  decode32_tests.cpp  decode64_tests.cpp  encode32_tests.cpp  encode64_tests.cpp  test_hcc.cpp  test_hhc.cpp  unpad_tests.cpp  validate_tests.cpp
