[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hhc"
version = "1.0.0"
description = "Python bindings for HHC (High-performance Hash Codec)"
readme = "../README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "HHC Authors"}
]
keywords = ["encoding", "codec", "hash", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pybind11>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/kirbyevanj/hhc-cpp"
Repository = "https://github.com/kirbyevanj/hhc-cpp"
Issues = "https://github.com/kirbyevanj/hhc-cpp/issues"

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "pp*"]
build-verbosity = 1

# Note: Native runners used, no cross-compilation needed
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

